# Riru-StartActivityConfirm

./: .gitignore  README.md  build.gradle  settings.gradle
classpath/src/main/java/android/app/: ActivityThread.java  IActivityManager.java  IWindowManager.java  IWindowSession.java  ResultInfo.java
classpath/src/main/java/android/os/: ServiceManager.java
src/main/cpp/: CMakeLists.txt  hook.c  hook.h  log.h  main.c
src/main/java/com/github/kr328/dcm/: Global.java  Injector.java  InterfaceProxy.java  ProxyArrayList.java
src/main/java/com/github/kr328/sac/: ActivityRequest.java  ActivityResult.java  ApplicationInjector.java  Global.java  IConfirmCallback.java  IStartActivityConfirmService.java  Injector.java  InterfaceProxy.java  MethodInvokeRecord.java  StartActivityConfirmService.java  SystemServerInjector.java
src/main/raw/magisk/: config.sh  module.prop
src/main/raw/magisk/common/: post-fs-data.sh
